fix background image jump

--- a/src/styles.css
+++ b/src/styles.css
@@ -478,7 +478,7 @@ body {
 
 .background-image {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     left: 0px;
     top: 0px;
